counter-app/k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
