counter-app/k8s/backend/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
  labels:
    app: counter-backend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080
  to:
    kind: Service
    name: counter-backend
